--- a/interface/windowconfig/bookstore.config
+++ b/interface/windowconfig/bookstore.config
@@ -1,12 +1,11 @@
 {
-  "requiresBlueprint" : false,
-  
+  "requiresBlueprint": false,
   "paneLayout": {
     "background": {
       "type": "background",
-      "fileHeader": "/interface/mt_bookstore/craftingheader.png",
-      "fileBody": "/interface/mt_bookstore/mtbody.png",
-      "fileFooter": "/interface/mt_bookstore/craftingfooter.png"
+      "fileHeader": "/interface/bookstore/bs_top.png",
+      "fileBody": "/interface/bookstore/bs_body.png",
+      "fileFooter": "/interface/bookstore/bs_bot.png"
     },
     "close": {
       "type": "button",
@@ -18,8 +17,8 @@
         0
       ],
       "position": [
-        347,
-        261
+        375,
+        326
       ]
     },
     "windowtitle": {
@@ -42,10 +41,10 @@
     },
     "bgShine": {
       "type": "image",
-      "file": "/interface/crafting/shine.png",
+      "file": "/interface/bookstore/shine.png",
       "position": [
-        11,
-        0
+        0,
+        -12
       ],
       "zlevel": -10
     },
@@ -55,15 +54,15 @@
       "base": "/interface/crafting/upgradeReady.png",
       "position": [
         139,
-        258
+        332
       ],
       "zlevel": 5
     },
     "lblSchematics": {
       "type": "label",
       "position": [
-        88,
-        244
+        148,
+        307
       ],
       "hAnchor": "mid",
       "value": "^#b9b5b2;PRICE"
@@ -71,8 +70,8 @@
     "lblProducttitle": {
       "type": "label",
       "position": [
-        291,
-        244
+        320,
+        307
       ],
       "hAnchor": "mid",
       "value": "^#b9b5b2;PRODUCT"
@@ -80,16 +79,16 @@
     "spinCount": {
       "type": "spinner",
       "position": [
-        246,
-        46
+        276,
+        32
       ],
       "upOffset": 36
     },
     "tbSpinCount": {
       "type": "textbox",
       "position": [
-        258,
-        46
+        288,
+        32
       ],
       "textAlign": "center",
       "maxWidth": 16,
@@ -100,8 +99,8 @@
       "type": "image",
       "file": "/interface/crafting/amount.png",
       "position": [
-        252,
-        45
+        282,
+        31
       ],
       "zlevel": -3
     },
@@ -110,8 +109,8 @@
       "base": "/interface/button.png",
       "hover": "/interface/buttonhover.png",
       "position": [
-        297,
-        43
+        327,
+        29
       ],
       "caption": "Buy"
     },
@@ -120,8 +119,8 @@
       "base": "/interface/buttonactive.png",
       "hover": "/interface/buttonactivehover.png",
       "position": [
-        297,
-        43
+        327,
+        29
       ],
       "caption": "Stop"
     },
@@ -129,8 +128,8 @@
       "type": "image",
       "file": "/interface/crafting/craftbg.png",
       "position": [
-        222,
-        40
+        252,
+        26
       ],
       "zlevel": -5
     },
@@ -138,8 +137,8 @@
       "type": "itemslot",
       "callback": "null",
       "position": [
-        223,
-        41
+        253,
+        27
       ]
     },
     "btnFilterHaveMaterials": {
@@ -149,15 +148,15 @@
       "checkable": true,
       "checked": false,
       "position": [
-        66,
-        59
+        100,
+        47
       ]
     },
     "lblProduct": {
       "type": "label",
       "position": [
-        77,
-        58
+        112,
+        46
       ],
       "hAnchor": "left",
       "value": "CAN AFFORD"
@@ -165,32 +164,36 @@
     "description": {
       "type": "widget",
       "position": [
-        216,
-        41
+        245,
+        103
       ],
       "size": [
         140,
         220
       ]
     },
-	
-	"imgPlayerMoneyIcon" : {
-      "type" : "image",
-      "position" : [7, 23],
-      "file" : "/interface/money.png"
+    "imgPlayerMoneyIcon": {
+      "type": "image",
+      "position": [
+        7,
+        23
+      ],
+      "file": "/interface/money.png"
     },
-    "lblPlayerMoney" : {
-      "type" : "label",
-      "position" : [21, 23],
-      "hAnchor" : "left",
-      "value" : "0"
+    "lblPlayerMoney": {
+      "type": "label",
+      "position": [
+        21,
+        23
+      ],
+      "hAnchor": "left",
+      "value": "0"
     },
-	
     "filter": {
       "type": "textbox",
       "position": [
-        82,
-        43
+        112,
+        31
       ],
       "hint": "Search",
       "maxWidth": 70,
@@ -201,10 +204,10 @@
     "scrollArea": {
       "type": "scrollArea",
       "rect": [
-        31,
-        69,
-        200,
-        230
+        61,
+        58,
+        230,
+        292
       ],
       "children": {
         "itemList": {
@@ -230,14 +233,17 @@
                 ],
                 "zlevel": -1
               },
-              "itemName" : {
-                "type" : "label",
-                "position" : [25, 10],
-                "hAnchor" : "left",
-                "vAnchor" : "mid",
-                "lineSpacing" : 1.0,
-                "wrapWidth" : 116,
-                "value" : "Replace Me"
+              "itemName": {
+                "type": "label",
+                "position": [
+                  25,
+                  10
+                ],
+                "hAnchor": "left",
+                "vAnchor": "mid",
+                "lineSpacing": 1,
+                "wrapWidth": 116,
+                "value": "Replace Me"
               },
               "itemIcon": {
                 "type": "itemslot",
@@ -287,30 +293,57 @@
         }
       }
     },
-    "lvlNovels": {
+    "iconNovels": {
       "type": "image",
-      "file": "/interface/mt_bookstore/tabicon_novels.png",
+      "file": "/interface/bookstore/tabicon_novels.png",
       "position": [
-        10,
-        216
+        8,
+        277
       ],
       "zlevel": 3
     },
-    "lblManuals": {
-      "type": "image",
-      "file": "/interface/mt_bookstore/tabicon_manuals.png",
+	"lblNovels": {
+      "type": "label",
+      "value": "Novels",
       "position": [
-        10,
-        198
+        24,
+        279
       ],
       "zlevel": 3
     },
-    "lblHistory": {
+    "iconManuals": {
       "type": "image",
-      "file": "/interface/mt_bookstore/tabicon_history.png",
+      "file": "/interface/bookstore/tabicon_manuals.png",
       "position": [
-        10,
-        180
+        8,
+        259
+      ],
+      "zlevel": 3
+    },
+	"lblManuals": {
+      "type": "label",
+      "value": "Manuals",
+      "position": [
+        24,
+        262
+      ],
+      "zlevel": 3
+    },
+    "iconHistory": {
+      "type": "image",
+      "file": "/interface/bookstore/tabicon_history.png",
+      "position": [
+        8,
+        242
+      ],
+      "zlevel": 3
+    },
+	"lblHistory": {
+      "type": "label",
+      "value": "History",
+      "position": [
+        24,
+        244
       ],
       "zlevel": 3
     },
@@ -322,10 +355,10 @@
           "selected": true,
           "position": [
             3,
-            214
+            275
           ],
-          "baseImage": "/interface/mt_bookstore/unselectedTab.png",
-          "baseImageChecked": "/interface/mt_bookstore/selectedTab.png",
+          "baseImage": "/interface/bookstore/unselectedTab.png",
+          "baseImageChecked": "/interface/bookstore/selectedTab.png",
           "data": {
             "filter": [
               "novels"
@@ -335,10 +368,10 @@
         {
           "position": [
             3,
-            196
+            257
           ],
-          "baseImage": "/interface/mt_bookstore/unselectedTab.png",
-          "baseImageChecked": "/interface/mt_bookstore/selectedTab.png",
+          "baseImage": "/interface/bookstore/unselectedTab.png",
+          "baseImageChecked": "/interface/bookstore/selectedTab.png",
           "data": {
             "filter": [
               "manuals"
@@ -348,10 +381,10 @@
         {
           "position": [
             3,
-            178
+            239
           ],
-          "baseImage": "/interface/mt_bookstore/unselectedTab.png",
-          "baseImageChecked": "/interface/mt_bookstore/selectedTab.png",
+          "baseImage": "/interface/bookstore/unselectedTab.png",
+          "baseImageChecked": "/interface/bookstore/selectedTab.png",
           "data": {
             "filter": [
               "history"
