Tabs are managed via LUA script

--- a/Bookstore/interface/windowconfig/bookstore.config
+++ b/Bookstore/interface/windowconfig/bookstore.config
@@ -293,105 +293,10 @@
         }
       }
     },
-    "iconNovels": {
-      "type": "image",
-      "file": "/interface/bookstore/tabicon_novels.png",
-      "position": [
-        8,
-        277
-      ],
-      "zlevel": 3
-    },
-	"lblNovels": {
-      "type": "label",
-      "value": "Novels",
-      "position": [
-        24,
-        279
-      ],
-      "zlevel": 3
-    },
-    "iconManuals": {
-      "type": "image",
-      "file": "/interface/bookstore/tabicon_manuals.png",
-      "position": [
-        8,
-        259
-      ],
-      "zlevel": 3
-    },
-	"lblManuals": {
-      "type": "label",
-      "value": "Manuals",
-      "position": [
-        24,
-        262
-      ],
-      "zlevel": 3
-    },
-    "iconHistory": {
-      "type": "image",
-      "file": "/interface/bookstore/tabicon_history.png",
-      "position": [
-        8,
-        242
-      ],
-      "zlevel": 3
-    },
-	"lblHistory": {
-      "type": "label",
-      "value": "History",
-      "position": [
-        24,
-        244
-      ],
-      "zlevel": 3
-    },
     "categories": {
       "type": "radioGroup",
       "toggleMode": false,
-      "buttons": [
-        {
-          "selected": true,
-          "position": [
-            3,
-            275
-          ],
-          "baseImage": "/interface/bookstore/unselectedTab.png",
-          "baseImageChecked": "/interface/bookstore/selectedTab.png",
-          "data": {
-            "filter": [
-              "novels"
-            ]
-          }
-        },
-        {
-          "position": [
-            3,
-            257
-          ],
-          "baseImage": "/interface/bookstore/unselectedTab.png",
-          "baseImageChecked": "/interface/bookstore/selectedTab.png",
-          "data": {
-            "filter": [
-              "manuals"
-            ]
-          }
-        },
-        {
-          "position": [
-            3,
-            239
-          ],
-          "baseImage": "/interface/bookstore/unselectedTab.png",
-          "baseImageChecked": "/interface/bookstore/selectedTab.png",
-          "data": {
-            "filter": [
-              "history"
-            ]
-          }
-        }
-      ]
+      "buttons": []
     },
     "rarities": {
       "type": "radioGroup",
